--- a/styles.css
+++ b/styles.css
@@ -25,8 +25,20 @@ html {
     /* cambio para centrar verticalmente */
     gap: 15px;
     padding: 10px;
-    height: 100vh;
-    /* para que tome toda la altura de la ventana */
+    @media (min-width: 768px) {
+            height: 100vh;
+    }
+}
+
+
+#clock__wrapper {
+    @media (max-width: 768px) {
+        display: flex;
+        flex-direction: column;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
 }
 
 /* Contenedor del reloj */
@@ -338,6 +350,12 @@ html {
 }
 
 /* Panel de botones verticales */
+
+#side-buttons {
+    @media (max-width: 768px) {
+        display: none !important;
+    }
+}
 #side-buttons {
     display: flex;
     overflow-y: auto;
@@ -597,6 +615,10 @@ body {
     /* Flotación animada */
     animation: flotar 4s ease-in-out infinite;
     filter: drop-shadow(0 0 1px var(--shadow-color, #00aaff)) drop-shadow(0 0 3.5px var(--shadow-color, #00aaff));
+
+    @media (max-width: 768px) {
+        margin: 50px 0 10px 0;
+    }
 }
 
 /* Cada fila usa flex para alinear etiquetas y inputs */
@@ -732,13 +754,23 @@ input[readonly] {
 /* Contenedor de botones extra debajo del cuadro de inversión */
 #botonesExtra {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     gap: 12px;
-    /* separación vertical entre botones */
     margin-top: 20px;
-    /* espacio debajo del cuadro de inversión */
     align-items: center;
-    /* centrados horizontalmente */
+    position: relative;
+
+    @media (min-width: 768px) {
+        flex-direction: column !important;
+    }
+}
+
+.btn-lujo {
+    @media (max-width: 768px) {
+        min-width: 80px !important;
+        position: relative !important;
+        left: 0 !important; 
+    }
 }
 
 /* Animación de flotación suave */
