--- a/styles.css
+++ b/styles.css
@@ -9,10 +9,10 @@ body,
 html {
     margin: 0;
     padding: 0;
-    height: 100%;
+    /* height: 100%; */
     display: flex;
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
     background-color: #ffffff;
     font-family: Arial, sans-serif;
 }
@@ -36,7 +36,7 @@ html {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    @media (max-width: 768px) {
+    @media (max-width: 600px) {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -636,13 +636,8 @@ body {
     }
 }
 #title {
-    font-size: 16px;
-    line-height: 1.2;
-    font-weight: 600;
-    font-family: 'Times New Roman', Times, serif;
-    color: #48535C;
-    margin-bottom: 6px;
-    display: block;
+    margin: auto;
+    max-width: 140px;
 }
 
 
