New responsive adjustments

--- a/styles.css
+++ b/styles.css
@@ -641,9 +641,14 @@ body {
     font-weight: 600;
     color: #48535C;
     margin-bottom: 10px;
-    transform: translateX(-4px) translateY(4px);
+    transform: translateX(-5px) translateY(4px) translateY(14px);
     @media (max-width: 768px) {
         font-size: 12px;
+        transform: translateX(-10px) translateY(14px);
+    }
+
+    @media (max-width: 1300px) {
+        transform: translateX(-4px) translateY(16px);
     }
 }
 #title {
@@ -666,6 +671,14 @@ body {
     font-weight: 400;
     margin-bottom: 10px;
     text-shadow: none;
+
+    @media (max-width: 768px) {
+        transform: translateX(-8px);
+    }
+
+    @media (max-width: 1300px) {
+        transform: translateX(-4px);
+    }
 }   
 
 /* Cada fila usa flex para alinear etiquetas y inputs */
